2012-02-23  Marc Glisse  <marc.glisse@inria.fr>

	* mpz/abs.c: Use ALLOC, SIZ, ABSIZ, PTR, MPZ_REALLOC.
	* mpz/aors_ui.h: Likewise.
	* mpz/array_init.c: Likewise.
	* mpz/cdiv_q.c: Likewise.
	* mpz/cdiv_qr.c: Likewise.
	* mpz/cdiv_r.c: Likewise.
	* mpz/clear.c: Likewise.
	* mpz/clrbit.c: Likewise.
	* mpz/cmp_si.c: Likewise.
	* mpz/com.c: Likewise.
	* mpz/fdiv_q.c: Likewise.
	* mpz/fdiv_qr.c: Likewise.
	* mpz/fdiv_r.c: Likewise.
	* mpz/get_si.c: Likewise.
	* mpz/get_str.c: Likewise.
	* mpz/init.c: Likewise.
	* mpz/inp_str.c: Likewise.
	* mpz/iset.c: Likewise.
	* mpz/iset_d.c: Likewise.
	* mpz/iset_si.c: Likewise.
	* mpz/iset_str.c: Likewise.
	* mpz/iset_ui.c: Likewise.
	* mpz/mod.c: Likewise.
	* mpz/neg.c: Likewise.
	* mpz/out_str.c: Likewise.
	* mpz/random2.c: Likewise.
	* mpz/set_si.c: Likewise.
	* mpz/set_str.c: Likewise.
	* mpz/set_ui.c: Likewise.
	* mpz/setbit.c: Likewise.
	* mpz/sqrt.c: Likewise.
	* mpz/swap.c: Likewise.
	* mpz/tdiv_r_2exp.c: Likewise.

	* tests/cxx/t-ops.cc: Test mpz_abs reallocation.

2012-02-23  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/core2/rsh1aors_n.asm: Complete rewrite.
	* mpn/x86_64/coreisbr/rsh1aors_n.asm: Move old core2 code here.

	* mpn/x86_64/redc_1.asm: Make it work for DOS64 (broken in last edit).

2012-02-20 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/toom_interpolate_8pts.c: Compute carry iif non-trivial.

	* mpz/gcdext.c: Adapt to relaxed mpn_gcdext's input requirements.

	* mpz/and.c: Use mpn_ logic everywhere. Reduce branches.
	* mpz/ior.c: Likewise.
	* mpz/xor.c: Likewise.

2012-02-20  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/coreisbr/mul_1.asm: New file.

	* mpn/x86_64/coreisbr/aorsmul_1.asm: New file.

	* mpn/x86_64/mod_34lsub1.asm: Avoid ",pt" branch hint since many
	assemblers don't support it.

2012-02-19  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/redc_1.c: Put back mpn_add_n call, return its carry.
	Reintroduce previously removed RP argument.