@@ -34,9 +34,8 @@ mpz_neg (mpz_ptr w, mpz_srcptr u)
     {
       size = ABS (usize);
 
-      MPZ_REALLOC (w, size);
+      wp = MPZ_REALLOC (w, size);
 
-      wp = PTR (w);
       up = PTR (u);
 
       MPN_COPY (wp, up, size);
